# prototype_os

./: '  .gdbinit  Cargo.toml  Makefile
.cargo/: config
src/: bootloader.asm  entry.asm  heap_allocator.rs  lang_items.rs  linker.ld  loader.rs  main.rs  sysconfig.rs
src/hal/: generic_address.rs  generic_context.rs  generic_paging.rs  generic_trap.rs  mod.rs
src/hal/console/: mod.rs
src/hal/riscv/: address.rs  mod.rs  sbi.rs
src/hal/riscv/console/: mod.rs
src/hal/riscv/context/: context.rs  mod.rs
src/hal/riscv/paging/: entry.rs  mod.rs
src/hal/riscv/syscall/: fs.rs  mod.rs  proc.rs  timer.rs
src/hal/riscv/trap/: mod.rs  trap.rs  trapin.asm
src/hal/trap/: mod.rs  trapin.asm
src/misc/: bitmanip.rs  linked_list.rs  logger.rs  mod.rs  range.rs
src/mm/: address.rs  linked_list.rs  memory_set.rs  mod.rs  page_table.rs  pages.rs
src/mm/buddy_system/: mod.rs
src/mm/heap_allocator/: heap_allocator.rs  mod.rs
src/mm/page_table/: entry.rs  frame.rs  mod.rs  page_table.rs
src/ramfs/: mod.rs
src/sync/: mod.rs
src/task/: cpu.rs  mod.rs  pid.rs  sche.rs  task.rs
