[package]
name = "prototype_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.7.0"
spin = "0.7.1"
log = "0.4"
buddy_system_allocator = "0.7"
